@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-11T01:42:16Z",
+  "timestamp" : "2025-02-12T01:42:19Z",
   "count_outdated" : 1358,
   "uniques_outdated" : 883,
-  "count" : 1386,
-  "uniques" : 906,
+  "count" : 1387,
+  "uniques" : 907,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-02-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
