@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 16,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2025-02-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
