@@ -1,3 +1,12 @@
+2025-02-12T01:42:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13276205961 # 563
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-12
+* notice: last 14d: unq all: 16 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 883 1358 / 906 1386
+* notice: next accum: outdated-unq outdated-all / unq all: 883 1358 / 907 1387
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-11]
+
 2025-02-11T01:42:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13254150348 # 562
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-11
